--- a/.github/workflows/task-4.yml
+++ b/.github/workflows/task-4.yml
@@ -2,9 +2,9 @@ name: Task-4
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ master ]
   pull_request:
-    branches: [ dev ]
+    branches: [ master ]
 
 jobs:
   build:
